# zotero

./: .gitignore  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/api/: download_pdf.rs  get_collections.rs  get_items.rs  is_login.rs  login.rs  mod.rs  refresh.rs
src-tauri/src/dal/webdav/: error.rs  mod.rs
src-tauri/src/dal/zotero/: error.rs  mod.rs  model.rs
src-tauri/src/dal/zotero/api/collection/: mod.rs  model.rs
src-tauri/src/dal/zotero/api/item/: mod.rs  model.rs
src-tauri/src/model/: auth.rs  mod.rs  zotero_data.rs
src/api/: download_pdf.ts  get_collections.ts  get_item_by_collection.ts  is_login.ts  login.ts  refresh.ts
src/components/: ItemListView.vue  SideMenu.vue
src/router/: index.ts
src/views/: MainView.vue  loginView.vue
